--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Installation instructions 
 
-git clone git://github.com/....
+git clone https://github.com/sshekhar17/vimconfig.git
 
 Create symlink:
 
