Update readme about submodules

--- a/README
+++ b/README
@@ -5,3 +5,9 @@ git clone https://github.com/sshekhar17/vimconfig.git
 Create symlink:
 
 ln -s ~/.vim/vimrc ~/.vimrc
+
+
+Update the submodules:
+
+git submodule init
+git submodule update
